math-core/src/snapshots/math_core__tests__custom_cmds.snap
---
source: math-core/src/lib.rs
expression: mathml
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
