math-core/src/snapshots/math_core__tests__d_command.snap
---
source: math-core/src/lib.rs
expression: "\\d"
---
<math>
    <mi mathvariant="normal">d</mi>
</math>
