math-core/src/snapshots/math_core__tests__d_command_nested.snap
---
source: math-core/src/lib.rs
expression: "\\mathit{x\\d x}"
---
<math>
    <mrow>
        <mi>𝑥</mi>
        <mi mathvariant="normal">d</mi>
        <mi>𝑥</mi>
    </mrow>
</math>
