math-core/src/snapshots/math_core__tests__digits_unknown_cmd.snap
---
source: math-core/src/lib.rs
expression: "1.1\\asdf"
---
Position: 3
UnknownCommand(
    "asdf",
)
