math-core/src/snapshots/math_core__tests__double_prime_and_super.snap
---
source: math-core/src/lib.rs
expression: "f''^2"
---
<math>
    <msup>
        <mi>f</mi>
        <mrow>
            <mo>″</mo>
            <mn>2</mn>
        </mrow>
    </msup>
</math>
