math-core/src/snapshots/math_core__tests__double_sub.snap
---
source: math-core/src/lib.rs
expression: x__3
---
Position: 2
CannotBeUsedHere {
    got: Underscore,
    correct_place: AfterOpOrIdent,
}
