math-core/src/snapshots/math_core__tests__double_subscript.snap
---
source: math-core/src/lib.rs
expression: "g_{\\mu\\nu}"
---
<math>
    <msub>
        <mi>g</mi>
        <mrow>
            <mi>μ</mi>
            <mi>ν</mi>
        </mrow>
    </msub>
</math>
