math-core/src/snapshots/math_core__tests__end_without_open.snap
---
source: math-core/src/lib.rs
expression: "\\end{matrix}"
---
Position: 0
UnexpectedClose(
    End,
)
